Modifications de index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Site Web</title>
+    <title>Mon Site Personnel en IA</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Bienvenue sur mon site web</h1>
-    <p>Ceci est ma première page.</p>
+    <header>
+        <h1>Bienvenue sur mon Site Personnel</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">À Propos</a></li>
+                <li><a href="#projects">Projets</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>À Propos</h2>
+        <p>Présentation de mes compétences en IA et automatisation.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projets</h2>
+        <p>Exemples de projets réalisés comme le chatbot et le jeu Candy Crush.</p>
+    </section>
+
+    <section id="services">
+        <h2>Services</h2>
+        <p>Description des services d'IA et d'automatisation proposés.</p>
+    </section>
+
+    <section id="blog">
+        <h2>Blog Automatisé</h2>
+        <p>Transformation de posts LinkedIn en articles de blog optimisés pour le SEO.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Contactez-moi pour en savoir plus sur mes services.</p>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
