Création de la structure de base avec pages et bandeaux

--- a/index.html
+++ b/index.html
@@ -3,46 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Site Personnel en IA</title>
+    <title>DrivIA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Bienvenue sur mon Site Personnel</h1>
-        <nav>
+    <!-- Bandeau avec vidéo -->
+    <header class="main-banner">
+        <div class="logo-container">
+            <!-- Ici, tu inséreras le logo plus tard -->
+            <img src="logo-placeholder.png" alt="Logo de DrivIA" id="logo">
+            <h1>DrivIA</h1>
+        </div>
+        <nav class="main-nav">
             <ul>
-                <li><a href="#about">À Propos</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="a-propos-et-services.html">À propos et Services</a></li>
+                <li><a href="posts-et-projets.html">Posts et Projets</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="about">
-        <h2>À Propos</h2>
-        <p>Présentation de mes compétences en IA et automatisation.</p>
+    <!-- Bandeau À propos et Services -->
+    <section class="about-services-banner">
+        <!-- Contenu vierge pour l'instant -->
     </section>
 
-    <section id="projects">
-        <h2>Projets</h2>
-        <p>Exemples de projets réalisés comme le chatbot et le jeu Candy Crush.</p>
-    </section>
-
-    <section id="services">
-        <h2>Services</h2>
-        <p>Description des services d'IA et d'automatisation proposés.</p>
-    </section>
-
-    <section id="blog">
-        <h2>Blog Automatisé</h2>
-        <p>Transformation de posts LinkedIn en articles de blog optimisés pour le SEO.</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Contactez-moi pour en savoir plus sur mes services.</p>
+    <!-- Bandeau Posts et Projets -->
+    <section class="posts-projects-banner">
+        <!-- Contenu vierge pour l'instant -->
     </section>
 
     <script src="script.js"></script>
