Mise à jour du bandeau avec dégradé violet, majuscules et Helvetica. Ajout des pages À PROPOS DE NOUS, PROJETS, NOS SERVICES, CONTACT.

--- a/a-propos-et-services.html
+++ b/a-propos-et-services.html
@@ -7,7 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>À propos et Services</h1>
-    <p>Page en construction...</p>
+
+    <!-- Bandeau fixe -->
+    <header class="fixed-header">
+        <a href="index.html" class="logo-link">
+            <div class="logo-container">
+                <img src="logo-placeholder.png" alt="Logo de DrivIA" id="logo">
+                <h1>DrivIA</h1>
+            </div>
+        </a>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="a-propos-et-services.html">À propos et Services</a></li>
+                <li><a href="posts-et-projets.html">Posts et Projets</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Contenu principal -->
+    <section class="main-content">
+        <h1>À propos et Services</h1>
+        <p>Page en construction...</p>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
