--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DrivIA</title>
+    <title>Projets</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,16 +27,9 @@
     </header>
 
     <!-- Contenu principal -->
-    <section class="main-banner">
-        <!-- Contenu du bandeau principal (avec vidéo ou autre) -->
-    </section>
-
-    <section class="about-services-banner">
-        <!-- Contenu pour la section À propos et Services -->
-    </section>
-
-    <section class="posts-projects-banner">
-        <!-- Contenu pour la section Posts et Projets -->
+    <section class="main-content">
+        <h1>Projets</h1>
+        <p>Page en construction...</p>
     </section>
 
     <script src="script.js"></script>
