--- a/a-propos-de-nous.html
+++ b/a-propos-de-nous.html
@@ -12,7 +12,7 @@
     <header class="fixed-header">
         <a href="index.html" class="logo-link">
             <div class="logo-container">
-                <img src="logo-placeholder.png" alt="Logo de DrivIA" id="logo">
+                <img src="logo.png" alt="Logo de DrivIA" id="logo">
                 <h1>DrivIA</h1>
             </div>
         </a>
