--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="a-propos-de-nous.html">À propos de nous</a></li>
                 <li><a href="projets.html">Projets</a></li>
                 <li><a href="nos-services.html">Nos services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="contact-btn">Contact</a></li> <!-- Bouton Contact avec style spécial -->
             </ul>
         </nav>
     </header>
