Mise à jour du bandeau avec dégradé violet, majuscules et Helvetica. Ajout des pages À PROPOS DE NOUS, PROJETS, NOS SERVICES, CONTACT.

--- a/a-propos-de-nous.html
+++ b/a-propos-de-nous.html
@@ -21,7 +21,7 @@
                 <li><a href="a-propos-de-nous.html">À propos de nous</a></li>
                 <li><a href="projets.html">Projets</a></li>
                 <li><a href="nos-services.html">Nos services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="contact-btn">Contact</a></li>
             </ul>
         </nav>
     </header>
