Mise à jour du bandeau avec dégradé violet, majuscules et Helvetica. Ajout des pages À PROPOS DE NOUS, PROJETS, NOS SERVICES, CONTACT.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <!-- Bandeau fixe -->
+    <!-- Bandeau fixe en haut de la page -->
     <header class="fixed-header">
         <a href="index.html" class="logo-link">
             <div class="logo-container">
@@ -26,17 +26,9 @@
         </nav>
     </header>
 
-    <!-- Contenu principal -->
-    <section class="main-banner">
-        <!-- Contenu du bandeau principal (avec vidéo ou autre) -->
-    </section>
-
-    <section class="about-services-banner">
-        <!-- Contenu pour la section À propos et Services -->
-    </section>
-
-    <section class="posts-projects-banner">
-        <!-- Contenu pour la section Posts et Projets -->
+    <!-- Deuxième bandeau avec le leitmotiv -->
+    <section class="video-banner">
+        <h2 class="leitmotiv-text">L'IA QUI FAIT TOUT, POUR VOUS !</h2>
     </section>
 
     <script src="script.js"></script>
