Rendre le premier bandeau fixe lors du défilement

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         </nav>
     </header>
 
-    <!-- Deuxième bandeau avec le leitmotiv -->
+    <!-- Deuxième bandeau avec le leitmotiv et la vidéo -->
     <section class="video-banner">
+        <video autoplay muted loop id="background-video">
+            <source src="Vidéo accueil.mp4" type="video/mp4">
+            Votre navigateur ne supporte pas les vidéos HTML5.
+        </video>
         <h2 class="leitmotiv-text">L'IA QUI FAIT TOUT, POUR VOUS !</h2>
     </section>
 
