Rendre le premier bandeau fixe lors du défilement

--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
 </head>
 <body>
 
-    <!-- Bandeau fixe en haut de la page -->
+    <!-- Bandeau fixe en haut de la page (sans logo et nom d'entreprise) -->
     <header class="fixed-header">
-        <a href="index.html" class="logo-link">
-            <div class="logo-container">
-                <img src="logo.png" alt="Logo de DrivIA" id="logo">
-                <h1>DrivIA</h1>
-            </div>
-        </a>
         <nav class="main-nav">
             <ul>
                 <li><a href="a-propos-de-nous.html">À propos de nous</a></li>
