Rendre le premier bandeau fixe lors du défilement

--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
         </nav>
     </header>
 
-    <!-- Deuxième bandeau avec le leitmotiv et la vidéo -->
-    <section class="video-banner">
-        <video autoplay muted loop id="background-video">
-            <source src="Vidéo accueil.mp4" type="video/mp4">
-            Votre navigateur ne supporte pas les vidéos HTML5.
-        </video>
+    <!-- Section pour une future illustration -->
+    <section class="illustration-banner">
         <h2 class="leitmotiv-text">L'IA QUI FAIT TOUT, POUR VOUS !</h2>
     </section>
 
