Description de ce que vous avez modifié

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DrivIA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Lien vers la police Roboto de Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,7 +24,7 @@
 
     <!-- Section pour une future illustration -->
     <section class="illustration-banner">
-        <h2 class="leitmotiv-text">L'IA QUI FAIT TOUT, POUR VOUS !</h2>
+        <h2 class="leitmotiv-text">L'IA qui fait tout<br>Pour vous !</h2>
     </section>
 
     <script src="script.js"></script>
