--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>DrivIA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Lien vers la police Roboto de Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+    <!-- Lien vers la feuille de style -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
