Description de ce que vous avez modifié

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
     <!-- Section pour une future illustration -->
     <section class="illustration-banner">
-        <h2 class="leitmotiv-text">L'IA qui fait tout<br>Pour vous !</h2>
+        <h2 class="leitmotiv-text1">L'IA qui fait tout</h2>
+        <h2 class="leitmotiv-text2">    Pour vous !</h2>
     </section>
 
     <script src="script.js"></script>
