--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Section pour une future illustration -->
     <section class="illustration-banner">
         <h2 class="leitmotiv-text1">L'IA qui fait tout</h2>
-        <h2 class="leitmotiv-text2">    Pour vous !</h2>
+        <h2 class="leitmotiv-text2">----Pour vous !</h2>
     </section>
 
     <script src="script.js"></script>
