--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 
     <!-- Section pour une future illustration -->
     <section class="illustration-banner">
-        <h2 class="leitmotiv-text1">L'IA qui fait tout</h2>
-        <h2 class="leitmotiv-text2">----Pour vous !</h2>
+        <div class="leitmotiv-container">
+            <h2 class="leitmotiv-text">L'IA qui fait tout</h2>
+            <h2 class="leitmotiv-text">Pour vous !</h2>
+        </div>
     </section>
 
     <script src="script.js"></script>
