--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="illustration-banner">
         <div class="leitmotiv-container">
             <h2 class="leitmotiv-text">L'IA qui fait tout</h2>
-            <h2 class="leitmotiv-text">Pour vous !</h2>
+            <h2 class="leitmotiv-text indent">Pour vous !</h2>
         </div>
     </section>
 
