--- a/index.html
+++ b/index.html
@@ -41,18 +41,7 @@
                 url: "https://runtime-api.voiceflow.com" 
               },
               assistant: {
-                extensions: [
-                  DisableInputExtension,
-                  VideoExtension,
-                  TimerExtension,
-                  FormExtension,
-                  MapExtension,
-                  FileUploadExtension,
-                  KBUploadExtension,
-                  DateExtension,
-                  ConfettiExtension,
-                  FeedbackExtension,
-                ],
+                extensions: [FileUploadExtension]
               }
             });
           }
