--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               versionID: 'production', 
               voice: { 
                 url: "https://runtime-api.voiceflow.com" 
+              },
+              assistant: {
+                extensions: [FileUploadExtension]
               }
             });
           }
